--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -42,7 +42,7 @@ EndGamePauseSeconds=5
 
 # The names of the players to display on the screen
 # Note: If there are more players than names, the remaining players will be called "Player 3", "Player 4", etc.
-PlayerNames=Meni, Marina
+PlayerNames=Ofir, Omer
 # The width (in pixels) of each cell
 CellWidth=258
 # The height (in pixels) of each cell
